feat: view_balance

--- a/Simple Bank Manager/task/src/main/res/navigation/nav_graph.xml
+++ b/Simple Bank Manager/task/src/main/res/navigation/nav_graph.xml
@@ -17,5 +17,22 @@
         android:id="@+id/userMenuFragment"
         android:name="org.hyperskill.simplebankmanager.UserMenuFragment"
         android:label="fragment_user_menu"
-        tools:layout="@layout/fragment_user_menu" />
+        tools:layout="@layout/fragment_user_menu" >
+        <action
+            android:id="@+id/action_userMenuFragment_to_viewBalanceFragment"
+            app:destination="@id/viewBalanceFragment" />
+        <action
+            android:id="@+id/action_userMenuFragment_to_transferFundsFragment"
+            app:destination="@id/transferFundsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/viewBalanceFragment"
+        android:name="org.hyperskill.simplebankmanager.ViewBalanceFragment"
+        android:label="fragment_view_balance"
+        tools:layout="@layout/fragment_view_balance" />
+    <fragment
+        android:id="@+id/transferFundsFragment"
+        android:name="org.hyperskill.simplebankmanager.TransferFundsFragment"
+        android:label="fragment_transfer_funds"
+        tools:layout="@layout/fragment_transfer_funds" />
 </navigation>
