feat: currency_exchange

--- a/Simple Bank Manager/task/src/main/res/navigation/nav_graph.xml
+++ b/Simple Bank Manager/task/src/main/res/navigation/nav_graph.xml
@@ -24,6 +24,9 @@
         <action
             android:id="@+id/action_userMenuFragment_to_transferFundsFragment"
             app:destination="@id/transferFundsFragment" />
+        <action
+            android:id="@+id/action_userMenuFragment_to_calculateExchangeFragment"
+            app:destination="@id/calculateExchangeFragment" />
     </fragment>
     <fragment
         android:id="@+id/viewBalanceFragment"
@@ -35,4 +38,9 @@
         android:name="org.hyperskill.simplebankmanager.TransferFundsFragment"
         android:label="fragment_transfer_funds"
         tools:layout="@layout/fragment_transfer_funds" />
+    <fragment
+        android:id="@+id/calculateExchangeFragment"
+        android:name="org.hyperskill.simplebankmanager.CalculateExchangeFragment"
+        android:label="fragment_calculate_exchange"
+        tools:layout="@layout/fragment_calculate_exchange" />
 </navigation>
