feat: pay_bills

--- a/Simple Bank Manager/task/src/main/res/navigation/nav_graph.xml
+++ b/Simple Bank Manager/task/src/main/res/navigation/nav_graph.xml
@@ -27,6 +27,9 @@
         <action
             android:id="@+id/action_userMenuFragment_to_calculateExchangeFragment"
             app:destination="@id/calculateExchangeFragment" />
+        <action
+            android:id="@+id/action_userMenuFragment_to_payBillsFragment"
+            app:destination="@id/payBillsFragment" />
     </fragment>
     <fragment
         android:id="@+id/viewBalanceFragment"
@@ -43,4 +46,9 @@
         android:name="org.hyperskill.simplebankmanager.CalculateExchangeFragment"
         android:label="fragment_calculate_exchange"
         tools:layout="@layout/fragment_calculate_exchange" />
+    <fragment
+        android:id="@+id/payBillsFragment"
+        android:name="org.hyperskill.simplebankmanager.PayBillsFragment"
+        android:label="fragment_pay_bills"
+        tools:layout="@layout/fragment_pay_bills" />
 </navigation>
